feat(search): add optional structural search
